part of bug 109652, "Venkman needs to profile" sr=brendan, r=peterv, a=shaver add JS_Now to the jsapi, and JS_GetScriptVersion to jsdbgapi